Implemented project deletion

--- a/src/Components/ProjectItem/ProjectItem.css
+++ b/src/Components/ProjectItem/ProjectItem.css
@@ -10,3 +10,10 @@
     margin: 5px;
     text-align: center;
 }
+
+.remove-project {
+    display: inline-block;
+    margin: 5px;
+    color: red;
+    cursor: pointer;
+}
